fix: Cleaned up